<resources>
    <string name="add">Add</string>
    <string name="aero_continue">Continue</string>
    <string name="app_name">Aero Control</string>
    <string name="apply">Apply</string>
    <string name="average">Avg.</string>
    <string name="back_for_close">Press Back again to close the App.</string>
    <string name="cancel">Cancel</string>
    <string name="disabled">Disabled</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="enabled">Enabled</string>
    <string name="folder_empty">Folder is empty</string>
    <string name="got_it">Got it</string>
    <string name="maybe_later">Maybe later</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="need_reboot">This may require a reboot.</string>
    <string name="proceed_with_reset">Are you sure you want to proceed?</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reset</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="skip_splash">Skip</string>
    <string name="successful">Successful!</string>
    <string name="unavailable">Unavailable</string>
    <string name="undo">Undo</string>
    <string name="usage_time">Usage time</string>
    <string name="warning">Warning!</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="slider_app_monitor">App Monitor</string>
    <string name="slider_backup_restore">Backup/Restore</string>
    <string name="slider_cpu_settings">CPU Performance</string>
    <string name="slider_defy_parts">Defy/Droid X Parts</string>
    <string name="slider_gpu_settings">GPU Control</string>
    <string name="slider_memory_settings">Memory Tuning</string>
    <string name="slider_misc_settings">Misc. Settings</string>
    <string name="slider_overview">Overview</string>
    <string name="overview_section_system">System</string>
    <string name="overview_section_performance">Performance</string>
    <string name="overview_section_temperatures">Temperatures</string>
    <string name="overview_section_battery">Battery</string>
    <string name="overview_section_memory">Memory</string>
    <string name="overview_section_configuration">Configuration</string>
    <string name="overview_device">Device</string>
    <string name="overview_uptime">Uptime</string>
    <string name="overview_android_version">Android Version</string>
    <string name="overview_android_security_update">Android Security Update</string>
    <string name="overview_api_level">API Level</string>
    <string name="overview_architecture">Architecture</string>
    <string name="overview_kernel">Kernel</string>
    <string name="overview_cpu_governor">CPU Governor:</string>
    <string name="temperature_source_cpu">CPU</string>
    <string name="temperature_source_battery">Battery</string>
    <string name="temperature_source_gpu">GPU</string>
    <string name="temperature_source_soc">SoC</string>
    <string name="temperature_source_other">%1$s</string>
    <string name="temperature_source_fallback">Thermal Sensor %1$d</string>
    <string name="temperature_status">Status</string>
    <string name="battery_level">Level</string>
    <string name="battery_status">Status</string>
    <string name="battery_voltage">Voltage</string>
    <string name="battery_current">Current</string>
    <string name="battery_power_source">Power source</string>
    <string name="battery_power_source_battery">Battery</string>
    <string name="battery_power_source_usb">USB port</string>
    <string name="battery_power_source_ac">AC charger</string>
    <string name="slider_profile">Profiles</string>
    <string name="slider_statistics">CPU Statistics</string>
    <string name="slider_test_suite_settings">Test Suite</string>
    <string name="testsuite_linpack_test_title">Linpack Test</string>
    <string name="testsuite_linpack_test_summary">Runs the linpack test.</string>
    <string name="testsuite_linpack_running">Running Linpack</string>
    <string name="testsuite_linpack_running_summary">Burning your CPUs...</string>
    <string name="testsuite_use_all_cpus_title">Use All CPUs</string>
    <string name="testsuite_use_all_cpus_summary">Uses all detected CPUs for the benchmark instead of leaving one free. This can reduce device responsiveness.</string>
    <string name="available_memory">Memory:</string>
    <string name="storage_permission_required">Storage permission is required for this operation.</string>
    <string name="storage_operation_failed">Unable to access shared storage.</string>
    <string name="hardware_operation_failed">Unable to apply the hardware setting.</string>
    <string name="current_cpu_speed">CPU Frequency:</string>
    <string name="current_governor">Governor:</string>
    <string name="current_governor_index">Governor %1$d:</string>
    <string name="current_governor_cluster">Governor (CPU %1$s):</string>
    <string name="current_gpu_speed">GPU Frequency:</string>
    <string name="current_io_governor">I/O-Scheduler:</string>
    <string name="kernel_version">Kernel:</string>
    <string name="add_a_name">Profile name</string>
    <string name="apply_profile">Applying Per-App Profile:</string>
    <string name="define_a_name">Define a name for this profile.</string>
    <string name="nothing_added_yet">Whoops! You haven\'t added any profiles yet.</string>
    <string name="per_app_active">Per-App: Active</string>
    <string name="per_app_not_active">Per-App: Not active</string>
    <string name="profile_assign_to_apps">Assign to apps</string>
    <string name="profile_remove">Remove this profile</string>
    <string name="profile_remove_confirmation">This profile will be permanently deleted.</string>
    <string name="delete">Delete</string>
    <string name="return_to_normal">Returning to normal usage</string>
    <string name="perf_cpu_boost_control">CPU Boost</string>
    <string name="perf_cpu_boost_control_summary">Adjust the CPU boost tunables of your CPU here</string>
    <string name="perf_cpu_hotplug">Hotplug Settings</string>
    <string name="perf_cpu_hotplug_driver">Hotplug Driver</string>
    <string name="perf_cpu_hotplug_summary">Adjust the hotplug driver here</string>
    <string name="perf_live_oc_uc">Live OC/UC</string>
    <string name="perf_live_oc_uc_summary">Control Frequencies and Voltage in realtime!</string>
    <string name="perf_voltage_control">Voltage Control</string>
    <string name="perf_voltage_control_summary">Adjust the voltage of your CPU here</string>
    <string name="pref_cpu_freq">Frequencies</string>
    <string name="pref_max_freq_cpu">Max. Frequency</string>
    <string name="pref_min_freq_cpu">Min. Frequency</string>
    <string name="pref_cpu_governor">Governor Settings</string>
    <string name="pref_max_freq_cpu_cluster">Max. Frequency (CPU %1$s)</string>
    <string name="pref_min_freq_cpu_cluster">Min. Frequency (CPU %1$s)</string>
    <string name="pref_cpu_governor_cluster">Governor Settings (CPU %1$s)</string>
    <string name="pref_apply_to_all_cpu_clusters">Apply to all clusters</string>
    <string name="pref_apply_to_all_cpu_clusters_summary">Applies changes from the first cluster\'s controls to every detected CPU cluster.</string>
    <string name="pref_gov_set">Governor Specific Settings</string>
    <string name="pref_gov_set_no_parameter">Looks like there are no parameter for this governor?</string>
    <string name="mv_minus">-25 mV</string>
    <string name="mv_plus">+25 mV</string>
    <string name="perf_gpu_gov">GPU Governor</string>
    <string name="perf_gpu_gov_settings">GPU Governor Settings</string>
    <string name="perf_gpu_gov_settings_summary">Tweak the governor parameters of your GPU.</string>
    <string name="pref_gpu_control_enable">GPU Control</string>
    <string name="pref_gpu_control_enable_summary">This will enable the GPU Control driver. It manages overclocking/undervolting as well as some basic scheduling for the GPU.</string>
    <string name="pref_max_freq_gpu">Max. Frequency</string>
    <string name="pref_max_freq_gpu_summary">This will set the maximum GPU Frequency. Default is 200 MHz.</string>
    <string name="io_scheduler">IO Scheduler</string>
    <string name="pref_dalvik_settings">VM Settings</string>
    <string name="pref_dalvik_settings_heading">Virtual Machine</string>
    <string name="pref_dalvik_settings_summary">Change parameters of the virtual machine.</string>
    <string name="pref_dynamic_fsync">Dynamic FSync</string>
    <string name="pref_dynamic_fsync_summary">Dynamic FSync enables fsync only while the screen is off.</string>
    <string name="pref_dynamic_writeback">Writeback Control</string>
    <string name="pref_dynamic_writeback_summary">Enable or Disable the writeback control here.</string>
    <string name="pref_entropy_settings">Entropy</string>
    <string name="pref_entropy_settings_summary">Change the read and write threshold for the entropy pool.</string>
    <string name="pref_fsync">FSync</string>
    <string name="pref_fsync_summary">Enables or disabled FSync completely.</string>
    <string name="pref_fstrim">Trim Option</string>
    <string name="pref_fstrim_no_busybox">BusyBox is required for this operation!</string>
    <string name="pref_fstrim_summary">Trim several parts of your system! This might take a while.</string>
    <string name="pref_io_scheduler">IO Scheduler Parameter</string>
    <string name="pref_io_scheduler_no_parameter">Looks like there are no parameter for this scheduler?</string>
    <string name="pref_ksm">KSM</string>
    <string name="pref_ksm_summary">Enables or disabled the KSM daemon completely.</string>
    <string name="pref_low_memory">Low Memory</string>
    <string name="pref_low_memory_summary">Current ro.config.low_ram value: %1$s</string>
    <string name="pref_memory_settings">Memory Settings</string>
    <string name="pref_readahead">Readahead size</string>
    <string name="pref_readahead_dialog">Readahead size in kB</string>
    <string name="defy_energy_saver">Energy Saver</string>
    <string name="defy_green_colors">Defy Green Colors</string>
    <string name="defy_red_colors">Defy Red Colors</string>
    <string name="pref_button_brightness">Button Brightness</string>
    <string name="pref_charging_led">Charging LED Color</string>
    <string name="pref_charging_led_summary">Color of your LED while charging</string>
    <string name="pref_charge_led_mode_white">White LED</string>
    <string name="pref_charge_led_mode_green">Green LED</string>
    <string name="pref_charge_led_mode_rgb">Mixed LED (red/green)</string>
    <string name="pref_charge_led_mode_off">Off</string>
    <string name="pref_display_color">Display Color</string>
    <string name="pref_display_color_summary">Adjust the display color here.</string>
    <string name="pref_doubletaptowake">Doubletap2Wake</string>
    <string name="pref_boot_delay">Boot Timer Delay</string>
    <string name="pref_boot_delay_dialog">Delay in minutes</string>
    <string name="pref_per_app_service">Per-App Profile Service</string>
    <string name="pref_per_app_service_summary">Enable or disable the Per-App profile service.</string>
    <string name="pref_perapp_monitor">Per-App Monitor</string>
    <string name="pref_perapp_toasts">Per-App Toasts</string>
    <string name="pref_profile_import">Import</string>
    <string name="pref_reboot_check">Random Reboot Checker</string>
    <string name="pref_reboot_check_summary">It will inform you if your device had a sudden reboot.</string>
    <string name="pref_reset_tutorials">Reset Tutorials</string>
    <string name="about">About</string>
    <string name="donation_blechdose">Blechd0se</string>
    <string name="github">GitHub</string>
    <string name="legal">Legal Notices</string>
    <string name="xda">XDA Thread</string>
</resources>