<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory android:title="@string/pref_app_specific">
        <CheckBoxPreference
            android:title="@string/pref_reboot_check"
            android:key="reboot_checker"
            android:summary="@string/pref_reboot_check_summary"/>
        <CheckBoxPreference
            android:title="@string/pref_per_app_service"
            android:key="per_app_service"
            android:summary="@string/pref_per_app_service_summary"/>
        <CheckBoxPreference
            android:title="@string/pref_perapp_monitor"
            android:key="per_app_monitor"
            android:summary="Enable or disable the AppMonitor."/>
        <CheckBoxPreference
            android:title="@string/pref_perapp_toasts"
            android:key="per_app_toast"
            android:summary="Enable or disable toast-notifications"/>
        <ListPreference
            android:entries="@array/boot_delay"
            android:title="@string/pref_boot_delay"
            android:key="boot_delay"
            android:dialogTitle="@string/pref_boot_delay_dialog"
            android:entryValues="@array/boot_delay"/>
        <Preference
            android:title="@string/pref_reset_tutorials"
            android:key="reset_tutorials"
            android:summary=""/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:title="Version"
            android:key="version"/>
        <Preference
            android:title="@string/xda"
            android:key="xda_thread"/>
        <Preference
            android:title="@string/github"
            android:key="github_link"/>
        <Preference
            android:title="@string/legal"
            android:key="legal"/>
        <Preference
            android:title="@string/about"
            android:key="about"/>
    </PreferenceCategory>
</PreferenceScreen>
